--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="/js/tether.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style type="text/css">
       .iconspace-lg{
