--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="/js/tether.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+    <!-- <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style type="text/css">
@@ -26,7 +27,8 @@
       .navbar-height{
         height: 60px;
       }
-      .glyph-height{
+      .glyph-big-blue{
+        color: #428bca;
         font-size:1.5em;
       }
       .panel-margin{
@@ -38,16 +40,16 @@
     <nav class="navbar navbar-inverse navbar-height">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">DrawBot</a>
+          <a class="navbar-brand" href="#" style="color:#428bca">DrawBot</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" title="Home"><span class="glyph-height glyphicon glyphicon-home"></span></a></li>
-          <li class="iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" title="Draw"><span class="glyph-height glyphicon glyphicon-pencil"></span></a></li>
-          <li class="iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" title="Upload"><span class="glyph-height glyphicon glyphicon-upload"></span></a></li>
+          <li class="active iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" data-html="true" title="<font color='#428bca'>Home</font>"><span class="glyph-big-blue glyphicon glyphicon-home"></span></a></li>
+          <li class="iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" data-html="true" title="<font color='#428bca'>Draw</font>"><span class="glyph-big-blue glyphicon glyphicon-pencil"></span></a></li>
+          <li class="iconspace-lg"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" data-html="true" title="<font color='#428bca'>Upload</font>"><span class="glyph-big-blue glyphicon glyphicon-upload"></span></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="iconspace-sm"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" title="WiFi"><span class="glyph-height glyphicon glyphicon-signal"></span></a></li>
-          <li class="iconspace-sm"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" title="Settings"><span class="glyph-height glyphicon glyphicon-cog"></span></a></li>
+          <li class="iconspace-sm"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" data-html="true" title="<font color='#428bca'>WiFi</font>"><span class="glyph-big-blue glyphicon glyphicon-signal"></span></a></li>
+          <li class="iconspace-sm"><a href="#" data-toggle="tooltip" data-placement="bottom" data-delay="0" data-html="true" title="<font color='#428bca'>Settings</font>"><span class="glyph-big-blue glyphicon glyphicon-cog"></span></a></li>
         </ul>
       </div>
     </nav>
