Fixed arrow color.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			.popover {
     			background: #222222!important;
 			}
-			.popover.bottom title:before {
-				border-bottom-color: #d9534f;
+			.popover.bs-popover-bottom .arrow::after {
+				border-bottom-color: #428bca!important;
 			}
 			.box-shadow{
 				box-shadow: 5px 5px 15px #888888;
@@ -64,13 +64,6 @@
 			<div class="row justify-content-center">
 				<div class="col-10">
 			  		<div class="card bg-light border-secondary mt-card box-shadow" style="width: 100%;">
-						<div class="card-body">
-							<p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							<p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							<p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</div>
-					<div class="card bg-light mt-card box-shadow" style="width: 100%;">
 						<div class="card-body">
 							<p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							<p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
