--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
       .card-gap-top { margin-top: 48px!important; }
       .card-gap-bottom { margin-bottom: 20px; }
+      .card-pad-bottom { padding-bottom: 20px; }
       .card-height-full { height: 100%; }
       .card-title-stripe { height: 3em; background: repeating-linear-gradient(
                             45deg,
@@ -213,7 +214,7 @@
           </div> <!-- end row (Bottom Card: Memory Card) -->
         </div> <!-- end col (Cards: System and Memory Card) -->
 
-        <div class="col-lg-8">
+        <div class="col-lg-8 card-pad-bottom">
           <div class="card bg-primary card-gap-bottom card-height-full shadow">
             <div class="card-header card-title-stripe text-white text-center shadow2">
               <h4>Preview</h4>
@@ -321,8 +322,8 @@
         </div> <!-- end col (Card: Network) -->
 
         <!-- Card: Progress -->
-        <div class="col-lg-6">
-          <div class="card bg-primary card-gap-bottom shadow">
+        <div class="col-lg-6 card-pad-bottom">
+          <div class="card bg-primary card-gap-bottom card-height-full shadow">
             <div class="card-header card-title-stripe text-white text-center shadow2">
               <h4>Progress</h4>
             </div>
@@ -334,8 +335,8 @@
         </div> <!-- end col (Card: Progress) -->
 
         <!-- Card: Arms -->
-        <div class="col-lg-2">
-          <div class="card bg-primary card-gap-bottom shadow">
+        <div class="col-lg-2 card-pad-bottom">
+          <div class="card bg-primary card-gap-bottom card-height-full shadow">
             <div class="card-header card-title-stripe text-white text-center shadow2">
               <h4>Arms</h4>
             </div>
