--- a/index.html
+++ b/index.html
@@ -52,6 +52,54 @@
             .popover { background: #007bff!important; }
             .popover.bs-popover-bottom .arrow::after { border-bottom-color: #007bff!important; }
         </style>
+
+        <!-- Styles for file list cards -->
+        <style type="text/css">
+            .filelist-shortcut {}
+
+            #filelist .m-icon { margin-right: 5px; }
+
+            #filelist .center, #wrap { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
+            #filelist * { box-sizing: border-box; text-align: center; text-decoration: none; }
+
+            #filelist { width: 50%; height: auto; }
+            #filelist .card { width: 32%; height: auto; background: #fff; box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.3); float: left; position: relative; border-radius: 5px; padding: 0 10px; }
+            #filelist .card:nth-child(2) { margin: 0 2%; }
+            #filelist .check-hover:hover .thumb { top: -25%; }
+            #filelist .card .thumb {
+              width: 90%;
+              height: 100px;
+              background: #000;
+              border-radius: 5px;
+              background-size: cover;
+              background-position: center;
+              position: absolute;
+              left: 50%;
+              top: -10%;
+              -webkit-transform: translateX(-50%);
+                      transform: translateX(-50%);
+              z-index: 10;
+              -webkit-transition: 0.3s cubic-bezier(0.67, -0.12, 0.45, 1.5);
+              transition: 0.3s cubic-bezier(0.67, -0.12, 0.45, 1.5);
+              box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.3);
+            }
+            #filelist .card #one { background-image: url("https://source.unsplash.com/UcfKYTan-LU"); }
+            #filelist .card .shortcut { width: 100%; height: 40px; margin: 40px auto 0 auto; }
+            #filelist .card .shortcut i { font-size: 18px; line-height: 30px; padding: 0 5%; color: #007bff; opacity: 0.6; position: relative; }
+            #filelist .card .shortcut i:hover { cursor: pointer; }
+            #filelist .card h4 { font-size: 18px; font-weight: 700; margin-top: 10px; color: #007bff; opacity: 0.6; }
+            #filelist .card hr { width: 10%; opacity: 0.5; margin: 10px auto; }
+            #filelist .card .descrip1 { margin: 0px; font-size: 0.8em; line-height: 20px; opacity: 0.8; }
+            #filelist .card .descrip2 { margin: 20px 1px 1px 1px; font-size: 0.6em; line-height: 15px; opacity: 0.8; }
+            #filelist .card .btn-draw { margin-bottom: 10px; }
+
+            @media screen and (max-width: 480px) {
+              #filelist { top: 10%; -webkit-transform: translate(-50%, 0); transform: translate(-50%, 0); }
+              #filelist .card {  width: 100%; }
+              #filelist .card:nth-child(2) { margin: 50px 0; }
+              #filelist .card:nth-child(3) { margin-bottom: 20px; }
+            }
+        </style>
     </head>
 
     <body>
@@ -63,7 +111,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link margin-lg active" data-toggle="tab" href="#Home" id="nav-home"><i class="fa fa-home fa-2x fa-fw theme-color1 "></i></a>
+                    <a class="nav-item nav-link margin-lg active" data-toggle="tab" href="#Home" id="nav-home"><i class="fa fa-home fa-2x fa-fw theme-color1"></i></a>
                     <!--
                     <span data-toggle="tab">
                         <a class="nav-item nav-link margin-lg active" href="#Home" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-html="true" data-content="<font color='white'>Home</font>"><i class="fa fa-home fa-2x fa-fw theme-color1 "></i></a>
@@ -365,27 +413,39 @@
                 </div> <!-- end tab-pane (Home) -->
 
                 <div class="tab-pane" id="Draw" role="tabpanel">
-                    <div class="container">
-                        <h1>Draw</h1>
+                    <div id="filelist">
+                        <div class="card">
+                            <span class="check-hover">
+                            <div class="thumb" id="one"></div>
+                            <div class="shortcut">
+                                <a href="#" id="filelist-copy"><i class="fa fa-clone fa-md fa-fw m-icon"></i></a>
+                                <a href="#" id="filelist-refactor"><i class="fa fa-cogs fa-md fa-fw m-icon"></i></a>
+                                <a href="#" id="filelist-rename"><i class="fa fa-i-cursor fa-md fa-fw m-icon"></i></a>
+                                <a href="#" id="filelist-delete"><i class="fa fa-trash fa-md fa-fw m-icon"></i></a>
+                            </div>
+                            </span>
+                            <h4>MonaLisa</h4>
+                            <hr/>
+                            <p class="descrip1">100mm x 50mm</p>
+                            <p class="descrip1">January 1, 2017</p>
+                            <p class="descrip1">1.27 MB</p>
+
+                            <p class="descrip2">Drawing Time: 23 Min</p>
+                            <button type="button" class="btn btn-outline-primary btn-draw">Draw!</button>
+                        </div>
                     </div>
                 </div> <!-- end tab-pane (Draw) -->
 
                 <div class="tab-pane" id="Upload" role="tabpanel">
-                    <div class="container">
-                        <h1>Upload</h1>
-                    </div>
+                    <h1>Upload</h1>
                 </div> <!-- end tab-pane (Upload) -->
 
                 <div class="tab-pane" id="Wifi" role="tabpanel">
-                    <div class="container">
-                        <h1>Wifi</h1>
-                    </div>
+                    <h1>Wifi</h1>
                 </div> <!-- end tab-pane (Wifi) -->
 
                 <div class="tab-pane" id="Settings" role="tabpanel">
-                    <div class="container">
-                        <h1>Settings</h1>
-                    </div>
+                    <h1>Settings</h1>
                 </div> <!-- end tab-pane (Settings) -->
 
             </div>
@@ -515,6 +575,30 @@
                 $('#nav-settings').popover({
                             html: true,
                             content: "<font color='white'>Settings</font>",
+                            trigger: 'hover',
+                            placement:'bottom'
+                })
+                $('#filelist-copy').popover({
+                            html: true,
+                            content: "<font color='white'>Copy</font>",
+                            trigger: 'hover',
+                            placement:'bottom'
+                })
+                $('#filelist-refactor').popover({
+                            html: true,
+                            content: "<font color='white'>Refactor</font>",
+                            trigger: 'hover',
+                            placement:'bottom'
+                })
+                $('#filelist-rename').popover({
+                            html: true,
+                            content: "<font color='white'>Rename</font>",
+                            trigger: 'hover',
+                            placement:'bottom'
+                })
+                $('#filelist-delete').popover({
+                            html: true,
+                            content: "<font color='white'>Delete</font>",
                             trigger: 'hover',
                             placement:'bottom'
                 })
