--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="col icon-links icon-links-pos">
-                                                    <div class="d-flex pull-right">
+                                                    <div class="d-med-flex pull-right hidden-md-lg">
                                                         <a href="#" class="ml-3"><i class="fa fa-search fa-lg fa-fw"></i></a>
                                                         <div class="btn-group">
                                                             <a href="#" class="ml-3" data-toggle="dropdown"><i class="fa fa-sort-amount-desc fa-lg fa-fw"></i></a>
@@ -502,6 +502,9 @@
                                                             <a class="dropdown-item" href="#">Refresh</a>
                                                             <a class="dropdown-item" href="#">Refresh</a>
                                                         </div> -->
+                                                    </div>
+                                                    <div class="d-sm-flex pull-right">
+                                                        <a href="#"><i class="fa fa-chevron-down fa-lg fa-fw"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
